# trailmem

./: .gitignore  AGENTS.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  pyproject.toml
docs/: cli.md  dashboard.md  dedup.md  evolution.md  hooks.md  host-discovery.md  host-integration.md  index.md  mcp.md  migration.md  schema.md  welcome.md
tests/: test_agy_hook.py  test_claude_hook.py  test_codex_hook.py  test_identity.py  test_kiro_hook.py  test_mcp_e2e.py  test_phase0.py  test_session_migration.py  test_smoke.py  test_uninstall.py
trailmem/: __init__.py  __main__.py  cli.py  config.py  console.py  dashboard.py  embeddings.py  errors.py  identity.py  integrate.py  mcp_server.py  models.py  ops.py  queries.py  schema.py  sessions.py  store.py
trailmem/commands/: tm-save.md
trailmem/hosts/: __init__.py  _util.py  antigravity.py  claude.py  codex.py  cursor.py  kilo.py  kiro.py  opencode.py  windsurf.py  zed.py
trailmem/skill/: SKILL.md
